--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -218,3 +218,65 @@
     }
   }
 }
+
+.input-border {
+  width: 100%;
+  outline: none;
+  font-size: 14px;
+  padding: 5px 10px;
+  line-height: 22px;
+}
+
+.input-border::placeholder {
+  color: lightgrey;
+  font-size: 14px;
+  line-height: 22px;
+}
+
+.input-border.error {
+  border: 1px solid var(--color-error);
+}
+
+.background-loading {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9;
+}
+
+.background-loading:after,
+.background-loading:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  @media (max-width: 768px) {
+    width: 80px;
+    height: 80px;
+  }
+}
+
+.background-loading:before {
+  z-index: 5;
+  border: 4px dashed #0060ff;
+  border-left: 4px solid transparent;
+  border-bottom: 4px solid transparent;
+  -webkit-animation: dashed 1.5s linear infinite;
+  animation: dashed 1.5s linear infinite;
+}
+
+.background-loading:after {
+  z-index: 10;
+  border: 4px solid rgba(0, 98, 255, 0.8);
+  border-left: 4px solid transparent;
+  border-bottom: 4px solid transparent;
+  -webkit-animation: dashed 1.5s ease infinite;
+  animation: dashed 1.5s ease infinite;
+}
