--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -237,6 +237,51 @@
   border: 1px solid var(--color-error);
 }
 
+//loading background
+.dashed-loading {
+  position: absolute;
+  width: 130px;
+  height: 130px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9;
+}
+
+.dashed-loading:after,
+.dashed-loading:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  width: 130px;
+  height: 130px;
+  @media (max-width: 768px) {
+    width: 130px;
+    height: 130px;
+  }
+}
+
+.dashed-loading:before {
+  z-index: 5;
+  border: 4px dashed #0060ff;
+  border-left: 4px solid transparent;
+  border-bottom: 4px solid transparent;
+  -webkit-animation: dashed 1.5s linear infinite;
+  animation: dashed 1.5s linear infinite;
+}
+
+.dashed-loading:after {
+  z-index: 10;
+  border: 4px solid rgba(0, 98, 255, 0.8);
+  border-left: 4px solid transparent;
+  border-bottom: 4px solid transparent;
+  -webkit-animation: dashed 1.5s ease infinite;
+  animation: dashed 1.5s ease infinite;
+}
+
 .background-loading {
   position: absolute;
   width: 80px;
@@ -279,6 +324,12 @@
   border-bottom: 4px solid transparent;
   -webkit-animation: dashed 1.5s ease infinite;
   animation: dashed 1.5s ease infinite;
+}
+
+@keyframes dashed {
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
 }
 
 //scrollbar
