update UI and integrate api profile

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -1,100 +1,101 @@
 //swiper (next/prev/pagination btn)
-.swiper-container{
-    position: relative;
-    &:hover{
-        .swiper-button-prev, .swiper-button-next {
-            visibility: visible;
-        }
-    }
-    .swiper-pagination-bullet {
-      background: #a8a7b3 !important;
-      opacity: 1 !important;
-      margin: 0 10px !important;
-      visibility: hidden;
-      &-active {
-        background: #2A60B9 !important;
-        position: relative;
-        width: 50px;
-        height: 8px;
-        border-radius: 999px;
-      }
-      @media (max-width: 1104px) {
-        visibility: visible
-    }
-    }
-    .swiper-button-prev {
-      transition: all 0.3s ease; 
-      visibility: hidden;
-      position: absolute;
-      top: 50%;
-      width: 50px;
-      height: 50px;
-      transform: translateY(-50%);
-      background-color: rgba(255,255,255,0.7);
-      border-radius: 50%;
-      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
-      &:after{
-        content: '';
-        width: 32px;
-        height: 32px;
-        background-image: url('../../public/icons/ic-chevron-left.svg');
-        background-size: 32px;
-        background-repeat: no-repeat;
-      }
-      @media (max-width: 1104px) {
-          display: none;
-      }
-    }
-    .swiper-button-next{
-      transition: all 0.3s ease; 
-      visibility: hidden;
-      position: absolute;
-      top: 50%;
-      width: 50px;
-      height: 50px;
-      transform: translateY(-50%);
-      background-color: rgba(255,255,255,0.7);
-      border-radius: 50%;
-      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
-      &:after{
-        content: '';
-        width: 32px;
-        height: 32px;
-        background-image: url('../../public/icons/ic-chevron-left.svg');
-        background-size: 32px;
-        background-repeat: no-repeat;
-        rotate: 180deg;
-      }
-      @media (max-width: 1104px) {
-        display: none;
-    }
+.swiper-container {
+  position: relative;
+  &:hover {
+    .swiper-button-prev,
+    .swiper-button-next {
+      visibility: visible;
     }
   }
+  .swiper-pagination-bullet {
+    background: #a8a7b3 !important;
+    opacity: 1 !important;
+    margin: 0 10px !important;
+    visibility: hidden;
+    &-active {
+      background: #2a60b9 !important;
+      position: relative;
+      width: 50px;
+      height: 8px;
+      border-radius: 999px;
+    }
+    @media (max-width: 1104px) {
+      visibility: visible;
+    }
+  }
+  .swiper-button-prev {
+    transition: all 0.3s ease;
+    visibility: hidden;
+    position: absolute;
+    top: 50%;
+    width: 50px;
+    height: 50px;
+    transform: translateY(-50%);
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 50%;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
+    &:after {
+      content: "";
+      width: 32px;
+      height: 32px;
+      background-image: url("../../public/icons/ic-chevron-left.svg");
+      background-size: 32px;
+      background-repeat: no-repeat;
+    }
+    @media (max-width: 1104px) {
+      display: none;
+    }
+  }
+  .swiper-button-next {
+    transition: all 0.3s ease;
+    visibility: hidden;
+    position: absolute;
+    top: 50%;
+    width: 50px;
+    height: 50px;
+    transform: translateY(-50%);
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 50%;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
+    &:after {
+      content: "";
+      width: 32px;
+      height: 32px;
+      background-image: url("../../public/icons/ic-chevron-left.svg");
+      background-size: 32px;
+      background-repeat: no-repeat;
+      rotate: 180deg;
+    }
+    @media (max-width: 1104px) {
+      display: none;
+    }
+  }
+}
 
- //custom scrollbar
+//custom scrollbar
 ::-webkit-scrollbar {
-    background: #fff;
-    width: 10px;
-    height: 11px;
+  background: #fff;
+  width: 10px;
+  height: 11px;
 }
 ::-webkit-scrollbar-thumb {
-    background: #ccc;
+  background: #ccc;
 }
 
-.card-zoom{
-    img{
-        transition: all 4s ease;
+.card-zoom {
+  img {
+    transition: all 4s ease;
+  }
+  &:hover {
+    img {
+      transform: scale(1.2);
     }
-    &:hover{
-        img{
-            transform: scale(1.2);
-        }
-    }
+  }
 }
 
-.card-translateX{
+.card-translateX {
   border-radius: 10px;
-   .hidden__img{
+  .hidden__img {
     display: block;
     width: 100%;
     height: 100%;
@@ -102,40 +103,40 @@
     transform: translateZ(0);
     position: relative;
     z-index: 9;
-    img{
+    img {
       border-radius: 10px;
       position: absolute;
       top: 0px;
       left: 0px;
       height: 300px;
       object-fit: cover;
-      -webkit-transition: opacity .35s,-webkit-transform .45s;
-      transition: opacity .35s,transform .45s;
-      -webkit-transform: translate3d(-40px,0,0);
-      transform: translate3d(-40px,0,0);
+      -webkit-transition: opacity 0.35s, -webkit-transform 0.45s;
+      transition: opacity 0.35s, transform 0.45s;
+      -webkit-transform: translate3d(-40px, 0, 0);
+      transform: translate3d(-40px, 0, 0);
       width: calc(100% + 60px) !important;
       max-width: none;
     }
-   }
-   &:hover{
-    .hidden__img{
+  }
+  &:hover {
+    .hidden__img {
       position: relative;
-      &:before{
+      &:before {
         position: absolute;
         z-index: 1;
         width: 100%;
         height: 100%;
-        content: '';
+        content: "";
         opacity: 0.2;
-        background: linear-gradient(45deg, #d60d45 0%,#046b8c 100%);
+        background: linear-gradient(45deg, #d60d45 0%, #046b8c 100%);
         cursor: pointer;
       }
-      img{
-        -webkit-transform: translate3d(0,0,0);
-        transform: translate3d(0,0,0);
+      img {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
       }
     }
-   }
+  }
 }
 
 .map-detail {
@@ -149,7 +150,7 @@
 }
 
 //calendar
-.calendar-wrapper{
+.calendar-wrapper {
   .ant-picker-calendar-date-content {
     .ant-badge {
       .ant-badge-status-dot {
