--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -224,7 +224,7 @@
   width: 100%;
   outline: none;
   font-size: 14px;
-  padding: 5px 10px;
+  padding: 10px;
   line-height: 22px;
 }
 
@@ -235,7 +235,7 @@
 }
 
 .input-border.error {
-  border: 1px solid var(--color-error);
+  border: 1px solid #f43f23;
 }
 
 //loading background
