--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -354,3 +354,39 @@
   background-color: var(--main);
   border-radius: 100vw;
 }
+
+.pagination {
+  margin-top: 10px;
+
+  &-item,
+  &-nav {
+    width: 32px;
+    height: 32px;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    margin: 0 3px;
+    background-color: transparent;
+    a {
+      width: 100%;
+      height: 100%;
+      display: block;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  &-nav.disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+  }
+
+  &-active {
+    background-color: #006ce4;
+    color: white;
+    border-color: var(--bs-card-bg);
+  }
+}
